update CRTCs before enabling an output

Summary:
When connecting the docking station (Lenovo OneLink+), which has a VGA
connected monitor attached, enabling a display usually fails. It
complains about no CRTC being available (and indeed the available CRTCs
don't have our output as possible output). Updating the CRTC before
enabling an output makes this work for me.

Note: it's not a problem when connecting via HDMI, this seems to be
either unique to VGA or to the docking station. (Other dock users report
similar behaviour).

I'm being fairly liberal with update calls here, probably just doing it
in enableOutput will work as well -- but I haven't extensively tested
it. I don't know how expensive these calls are.

On boot, my setup is still not restored, but at least with this patch
manually enabling an output works reliably now.

BUG:366346
FIXED-IN:5.7.4

Test Plan:
* rebooted with dock disconnected, can enable an output with this patch, would reliably fail without
* rebooted with dock connected, still works
* connected/disconnected/connected dock with output attached, works well

Reviewers: dvratil, graesslin

Reviewed By: graesslin

Subscribers: graesslin, plasma-devel, #plasma

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2336