backends/xrandr/xrandrcrtc.cpp
@@ -66,6 +66,7 @@ QVector<xcb_randr_output_t> XRandRCrtc::outputs() const
 
 bool XRandRCrtc::connectOutput(xcb_randr_output_t output)
 {
+    update();
     qCDebug(KSCREEN_XRANDR) << "Connected output" << output << "to CRTC" << m_crtc;
     if (!m_possibleOutputs.contains(output)) {
         qCDebug(KSCREEN_XRANDR) << "Output" << output << "is not an allowed output for CRTC" << m_crtc;
@@ -80,6 +81,7 @@ bool XRandRCrtc::connectOutput(xcb_randr_output_t output)
 
 void XRandRCrtc::disconectOutput(xcb_randr_output_t output)
 {
+    update();
     qCDebug(KSCREEN_XRANDR) << "Disconnected output" << output << "from CRTC" << m_crtc;
     const int index = m_outputs.indexOf(output);
     if (index > -1) {
